--- a/Public/assets/scss/style.scss
+++ b/Public/assets/scss/style.scss
@@ -486,7 +486,7 @@ footer {
     text-align: center;
     color: #797979;
     background-color: #0000;
-    border: none;
+    border: solid 10px black !important;
 }
 
 
